// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[object Object] 1`] = `
Object {
  "09960d18c947355e0b797d2c266e0825": Object {
    "count": 1,
    "value": 14,
  },
  "25daad3d9e60b45043a70c4ab7d3b1c6": Object {
    "count": 2,
    "value": 10,
  },
}
`;

exports[`SessionExecService addConfusionTS allows adding new timesteps 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: -1
    ActiveInstances: 0

    Blocks: [{
      Show solutions: false
      Status: PLANNED
      Time limit: -1
      Number of instances: 1
    }]

    ConfusionTS: [{
      Difficulty: -10
      Speed: 10
    }]

    Feedbacks: []

    Settings: {
      ConfusionActive: true
      FeedbacksActive: false
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addConfusionTS allows adding new timesteps 2`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: -1
    ActiveInstances: 0

    Blocks: [{
      Show solutions: false
      Status: PLANNED
      Time limit: -1
      Number of instances: 1
    }]

    ConfusionTS: [{
      Difficulty: -10
      Speed: 10
    },{
      Difficulty: 5
      Speed: -7
    }]

    Feedbacks: []

    Settings: {
      ConfusionActive: true
      FeedbacksActive: false
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addFeedback allows adding new feedbacks to a running session 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: -1
    ActiveInstances: 0

    Blocks: [{
      Show solutions: false
      Status: PLANNED
      Time limit: -1
      Number of instances: 1
    }]

    ConfusionTS: []

    Feedbacks: [{
      Content: feedback1
      Votes: 0
    }]

    Settings: {
      ConfusionActive: false
      FeedbacksActive: true
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addFeedback allows adding new feedbacks to a running session 2`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: -1
    ActiveInstances: 0

    Blocks: [{
      Show solutions: false
      Status: PLANNED
      Time limit: -1
      Number of instances: 1
    }]

    ConfusionTS: []

    Feedbacks: [{
      Content: feedback1
      Votes: 0
    },{
      Content: feedback2
      Votes: 0
    }]

    Settings: {
      ConfusionActive: false
      FeedbacksActive: true
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addResponse allows adding responses to a FREE question 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveInstances: 4

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 4
    }]

    ConfusionTS: []

    Feedbacks: []

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addResponse allows adding responses to a FREE question 2`] = `
Object {
  "c7cd24ea4ea9d3eaab020517ed1babb7": Object {
    "count": 1,
    "value": "SCHWEIZ",
  },
}
`;

exports[`SessionExecService addResponse allows adding responses to a FREE question 3`] = `

    QUESTION_INSTANCE

    isOpen: true
    version: 0

    responses: [
      ipUnique: undefined
      fpUnique: undefined
      value: {
        choices: undefined
        text: undefined
        value: SCHWEIZ
      }
    ,
      ipUnique: undefined
      fpUnique: undefined
      value: {
        choices: undefined
        text: undefined
        value: schwiiz...
      }
    ,
      ipUnique: undefined
      fpUnique: undefined
      value: {
        choices: undefined
        text: undefined
        value: SCHWEIZ
      }
    ]

    results: {
      CHOICES: []
      FREE: [object Object]
    }
  
`;

exports[`SessionExecService addResponse allows adding responses to a FREE_RANGE question 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveInstances: 4

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 4
    }]

    ConfusionTS: []

    Feedbacks: []

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addResponse allows adding responses to a FREE_RANGE question 2`] = `
Object {
  "25daad3d9e60b45043a70c4ab7d3b1c6": Object {
    "count": 1,
    "value": 10,
  },
}
`;

exports[`SessionExecService addResponse allows adding responses to a FREE_RANGE question 3`] = `

    QUESTION_INSTANCE

    isOpen: true
    version: 0

    responses: [
      ipUnique: undefined
      fpUnique: undefined
      value: {
        choices: undefined
        text: undefined
        value: 10
      }
    ,
      ipUnique: undefined
      fpUnique: undefined
      value: {
        choices: undefined
        text: undefined
        value: 14
      }
    ,
      ipUnique: undefined
      fpUnique: undefined
      value: {
        choices: undefined
        text: undefined
        value: 10
      }
    ]

    results: {
      CHOICES: []
      FREE: [object Object]
    }
  
`;

exports[`SessionExecService addResponse allows adding responses to a SC question 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveInstances: 4

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 4
    }]

    ConfusionTS: []

    Feedbacks: []

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addResponse allows adding responses to a SC question 2`] = `

    QUESTION_INSTANCE

    isOpen: true
    version: 0

    responses: [
      ipUnique: undefined
      fpUnique: undefined
      value: {
        choices: 0
        text: undefined
        value: undefined
      }
    ,
      ipUnique: undefined
      fpUnique: undefined
      value: {
        choices: 1
        text: undefined
        value: undefined
      }
    ]

    results: {
      CHOICES: [1,1,0]
      FREE: undefined
    }
  
`;

exports[`SessionExecService addResponse allows adding responses to a SC question 3`] = `

    QUESTION_INSTANCE

    isOpen: true
    version: 0

    responses: [
      ipUnique: undefined
      fpUnique: undefined
      value: {
        choices: 0
        text: undefined
        value: undefined
      }
    ,
      ipUnique: undefined
      fpUnique: undefined
      value: {
        choices: 1
        text: undefined
        value: undefined
      }
    ,
      ipUnique: undefined
      fpUnique: undefined
      value: {
        choices: 1
        text: undefined
        value: undefined
      }
    ]

    results: {
      CHOICES: [1,2,0]
      FREE: undefined
    }
  
`;

exports[`SessionExecService addResponse allows adding responses to an MC question 1`] = `

    SESSION

    Name: testing session
    Status: RUNNING

    ActiveBlock: 0
    ActiveInstances: 4

    Blocks: [{
      Show solutions: false
      Status: ACTIVE
      Time limit: -1
      Number of instances: 4
    }]

    ConfusionTS: []

    Feedbacks: []

    Settings: {
      ConfusionActive: false
      FeedbacksActive: false
      FeedbacksPublic: false
    }
`;

exports[`SessionExecService addResponse allows adding responses to an MC question 2`] = `

    QUESTION_INSTANCE

    isOpen: true
    version: 0

    responses: [
      ipUnique: undefined
      fpUnique: undefined
      value: {
        choices: 0
        text: undefined
        value: undefined
      }
    ,
      ipUnique: undefined
      fpUnique: undefined
      value: {
        choices: 0,1,2
        text: undefined
        value: undefined
      }
    ]

    results: {
      CHOICES: [2,1,1]
      FREE: undefined
    }
  
`;
